# docs/swagger.json
@@ -189,7 +189,7 @@
                 }
             }
         },
-        "/api/v1/mark/:mark_id": {
+        "/api/v1/mark/:post_id": {
             "delete": {
                 "security": [
                     {
@@ -1759,6 +1759,9 @@
                 },
                 "post_order": {
                     "type": "integer"
+                },
+                "post_type": {
+                    "type": "string"
                 },
                 "quiz_passed": {
                     "type": "boolean"
